--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,25 @@
 * {
+    margin: 0;
+    padding: 0;
     cursor: url('images/cursor.png'), auto;
     background-color: #01ADAD;
 }
 
 body {
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    display: grid;
+    grid-template-rows: repeat(8, 11.75vh) 6vh;
+    grid-template-columns: repeat(10, 10vw);
+}
+
+footer {
+    grid-column: span 10;
+    grid-row: 9;
+    background-color: #BDBBBD;
+    border-top: 3px solid #f2f2f2;
+    font-size: 14px;
 }
 
 h1 {
