--- a/public/style.css
+++ b/public/style.css
@@ -10,30 +10,36 @@ body {
     width: 100vw;
     overflow: hidden;
     display: grid;
-    grid-template-rows: repeat(8, 11.75vh) 6vh;
-    grid-template-columns: repeat(10, 10vw);
+    grid-template-rows: 94vh 6vh;
 }
 
 footer {
-    grid-column: span 10;
-    grid-row: 9;
+    grid-column: 1;
+    grid-row: 2;
     background-color: #BDBBBD;
     border-top: 3px solid #f2f2f2;
     font-size: 14px;
 }
 
-h1 {
-    width: fit-content;
+.appGrid {
+    margin: 0;
+    padding: 0;
+    grid-row: 1;
+    display: grid;
+    grid-template-rows: repeat(8, 11.75vh);
+    grid-template-columns: repeat(10, 10vw);
 }
 
-h1:hover {
+.app {
+    grid-column: 1;
+    grid-row: 1;
+    align-self: center;
+    justify-self: center;
+}
+
+.app:hover {
     color: gray;
     transform: translateY(-2px);
-    transition: .3s ease all color .2s ease;;
+    transition: .3s ease all color .2s ease;
     cursor: url('images/hoverCursor.png'), auto;
-}
-
-#snoopy {
-    width: 1000px;
-    height: 500px;
 }
