--- a/public/style.css
+++ b/public/style.css
@@ -36,6 +36,13 @@ footer {
     grid-auto-flow: column;
 }
 
+.backgroundImg{
+    grid-column: 5 / span 2;
+    grid-row: 4 / span 2;
+    align-self: center;
+    justify-self: center;
+}
+
 .app {
     font-family: "W95";
     padding: 5px;
@@ -60,5 +67,5 @@ footer {
 }
 
 .app.opened {
-    
+
 }
