--- a/public/style.css
+++ b/public/style.css
@@ -21,9 +21,19 @@ body {
 footer {
     grid-column: 1;
     grid-row: 2;
+    display: grid;
+    grid-template-columns: repeat(16, 6.25vw);
     background-color: #BDBBBD;
     border-top: 3px solid #f2f2f2;
     font-size: 14px;
+}
+
+.start {
+
+}
+
+.time {
+    grid-column: -2;
 }
 
 .appGrid {
