--- a/public/style.css
+++ b/public/style.css
@@ -9,22 +9,28 @@
     src: url("fonts/w95fa.woff") format("woff");
 }
 
+@media screen and (max-width: 767px) {
+    .backgroundImg {
+        display: none;
+    }
+}
+
 body {
     height: 100vh;
     width: 100vw;
     cursor: url('images/cursor.png'), auto;
     overflow: hidden;
     display: grid;
-    grid-template-rows: 94vh 6vh;
+    grid-template-rows: 94vh 1vh 5vh;
 }
 
 footer {
     grid-column: 1;
-    grid-row: 2;
+    grid-row: 3;
     display: grid;
-    grid-template-columns: repeat(16, 6.25vw);
+    grid-template-columns: 6vw 2vw 84vw 8vw;
     background-color: #BDBBBD;
-    border-top: 3px solid #f2f2f2;
+    border-top: 2px solid #f2f2f2;
     font-size: 14px;
 }
 
@@ -33,15 +39,44 @@ footer {
 }
 
 .time {
-    grid-column: -2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     align-self: center;
-    justify-self: center;
-    padding: 15px;
+    height: 35px;
+    margin-top: 0;
+    margin-bottom: 0;
+    grid-column: -2;
+    font-size: 16px;
+    padding: 0;
     background-color: #BDBBBD;
     border-right: 2px solid #f2f2f2;
     border-bottom: 2px solid #f2f2f2;
     border-left: 2px solid #8F8F8F;
     border-top: 2px solid #8F8F8F;
+}
+
+.clock {
+    font-family: "W95";
+}
+
+.speaker {
+    background-image: url('images/Volume.png');
+    background-size: contain;
+    background-position: center;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-right: 30px;
+    height: 26px;
+    width: 26px;
+}
+
+.speaker:hover {
+    cursor: url('images/hoverCursor.png'), auto;
+}
+
+.speaker.muted {
+    background-image: url('images/Muted.png');
 }
 
 .appGrid {
@@ -55,6 +90,12 @@ footer {
     background-color: #01ADAD;
 }
 
+.blank{
+    grid-row: 2;
+    background-color: #01ADAD;
+    border-bottom: 1px solid #BDBBBD;
+}
+
 .backgroundImg{
     grid-column: 5 / span 2;
     grid-row: 4 / span 2;
@@ -65,7 +106,6 @@ footer {
 }
 
 .app {
-    font-family: "W95";
     padding: 5px;
     align-self: center;
     justify-self: center;
@@ -73,10 +113,11 @@ footer {
 }
 
 .app p{
+    font-family: "W95";
+    color: #f2f2f2;
+    font-size: 18px;
     text-align: center;
-    margin-top: 0px;
-    font-size: 14px;
-    color: black;
+    margin-top: 2px;
 }
 
 .app:hover {
