--- a/public/style.css
+++ b/public/style.css
@@ -99,10 +99,17 @@ footer {
 .backgroundImg{
     grid-column: 5 / span 2;
     grid-row: 4 / span 2;
-    align-self: center;
     justify-self: center;
-    position: fixed;
+    align-self: center;
     user-select: none;
+}
+
+.backgroundImg p{
+    font-family: "W95";
+    color: #000000;
+    font-size: 50px;
+    text-align: center;
+    margin-top: 10px;
 }
 
 .app {
