--- a/public/style.css
+++ b/public/style.css
@@ -32,6 +32,7 @@ footer {
     background-color: #BDBBBD;
     border-top: 2px solid #f2f2f2;
     font-size: 14px;
+    filter: drop-shadow(0px -0.5px #BDBBBD);
 }
 
 .start {
@@ -93,7 +94,6 @@ footer {
 .blank{
     grid-row: 2;
     background-color: #01ADAD;
-    border-bottom: 1px solid #BDBBBD;
 }
 
 .backgroundImg{
@@ -136,6 +136,35 @@ footer {
     border: dotted 2px #ffffff;
 }
 
-.app.opened {
+.window {
+    position: fixed;
+    box-sizing: border-box;
+    background-color: #BDBBBD;
+    border-top: 2px solid #F2F2F2;
+    border-left: 2px solid #F2F2F2;
+    border-bottom: 2px solid #8F8F8F;
+    border-right: 2px solid #8F8F8F;
+    filter: 
+        drop-shadow(2px 2px 1px black)
+        drop-shadow(-0.5px 0px 0px #bdbbbd)
+        drop-shadow(0px -0.5px 0px #bdbbbd);
+    z-index: 10;
+    font-family: "W95";
+    display: grid;
+    grid-template-rows: 35px auto;
+}
 
+.window header {
+    grid-row: 1;
+    background-color: #000080;
+    color: white;
+    margin: 3px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: move;
+}
+
+.window p {
+    grid-row: 2;
 }
