--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,6 @@
 * {
     margin: 0;
     padding: 0;
-    
 }
 
 @font-face {
@@ -148,7 +147,6 @@ footer {
         drop-shadow(2px 2px 1px black)
         drop-shadow(-0.5px 0px 0px #bdbbbd)
         drop-shadow(0px -0.5px 0px #bdbbbd);
-    z-index: 10;
     font-family: "W95";
     display: grid;
     grid-template-rows: 35px auto;
@@ -162,9 +160,15 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    cursor: move;
+    cursor: url('images/dragCursor.png'), auto;
 }
 
-.window p {
+.window.background header{
+    background-color: #8F8F8F;
+}
+
+.window content {
     grid-row: 2;
+    margin: 3px;
+    background-color: red;
 }
