--- a/public/style.css
+++ b/public/style.css
@@ -27,28 +27,58 @@ footer {
     grid-column: 1;
     grid-row: 3;
     display: grid;
-    grid-template-columns: 6vw 2vw 84vw 8vw;
+    grid-template-columns: 4px 90px 1fr 83fr 1fr 110px 4px;
     background-color: #BDBBBD;
     border-top: 2px solid #f2f2f2;
     font-size: 14px;
     filter: drop-shadow(0px -0.5px #BDBBBD);
 }
 
-.start {
+.start{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    align-self: center;
+    height: 35px;
+    margin-top: 0;
+    margin-bottom: 0;
+    grid-column: 2;
+    font-size: 16px;
+    padding: 0;
+    background-color: #BDBBBD;
+    border-right: 2px solid #8F8F8F;
+    border-bottom: 2px solid #8F8F8F;
+    border-left: 2px solid #f2f2f2;
+    border-top: 2px solid #f2f2f2;
+    font-family: "W95";
+    font-weight: bolder;
+    font-size: 22px;
+    filter: drop-shadow(1px 1px 1px black);
+    cursor: url('images/hoverCursor.png'), auto;
+}
 
+.startImg {
+    background-image: url('images/Start.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 6px;
+    margin-right: 6px;
+    width: 25.5px;
+    height: 21px;
 }
 
 .time {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     align-self: center;
     height: 35px;
     margin-top: 0;
     margin-bottom: 0;
-    grid-column: -2;
-    font-size: 16px;
-    padding: 0;
+    grid-column: 6;
+    font-size: 18px;
     background-color: #BDBBBD;
     border-right: 2px solid #f2f2f2;
     border-bottom: 2px solid #f2f2f2;
@@ -58,15 +88,21 @@ footer {
 
 .clock {
     font-family: "W95";
+    flex-shrink: 0;
+    padding-right: 3px;
+    width: 65px;
 }
 
 .speaker {
+    justify-self: center;
+    flex-shrink: 0;
     background-image: url('images/Volume.png');
     background-size: contain;
     background-position: center;
+    background-repeat: no-repeat;
     margin-top: 0;
     margin-bottom: 0;
-    margin-right: 30px;
+    margin-right: 10px;
     height: 26px;
     width: 26px;
     cursor: url('images/hoverCursor.png'), auto;
@@ -206,6 +242,33 @@ footer {
     margin: 3px;
 }
 
+#About\ MeWindow content{
+    display: grid;
+    grid-template-columns: auto 350px auto;
+    grid-template-rows: auto 300px 100px auto;
+}
+
+#Richie{
+    grid-column: 2;
+    grid-row: 2;
+    height: auto;
+    width: 300px;
+    border-top: 2px solid #8F8F8F;
+    border-left: 2px solid #8F8F8F;
+    border-bottom: 2px solid #F2F2F2;
+    border-right: 2px solid #F2F2F2;
+    justify-self: center;
+    
+}
+
+#RichieDescription{
+    padding-top: 10px;
+    grid-column: 2;
+    grid-row: 3;
+    font-size: 18px;
+    justify-self: center;
+}
+
 #SocialsWindow content{
     display: grid;
     grid-template-columns: auto 100px 500px auto;
@@ -229,6 +292,7 @@ footer {
     background-repeat: no-repeat;
     background-size: contain;
     margin-right: 40px;
+    filter: drop-shadow(1px 1px 1px black);
 }
 
 .socialBtn p{
@@ -294,6 +358,7 @@ footer {
     font-family: "W95";
     font-size: 16px;
     cursor: url('images/hoverCursor.png'), auto;
+    filter: drop-shadow(1px 1px 1px black)
 }
 
 #downloadBtn{
@@ -369,6 +434,7 @@ footer {
     font-size: 18px;
     cursor: url('images/hoverCursor.png'), auto;
     margin-top: -4px;
+    filter: drop-shadow(1px 1px 1px black);
 }
 
 .resetBtn{
@@ -383,6 +449,7 @@ footer {
     font-size: 18px;
     cursor: url('images/hoverCursor.png'), auto;
     margin-top: -4px;
+    filter: drop-shadow(1px 1px 1px black);
 }
 
 .successContainer{
