--- a/public/style.css
+++ b/public/style.css
@@ -117,6 +117,7 @@ footer {
     padding: 0;
     grid-row: 1;
     display: grid;
+    justify-items: center;
     grid-template-rows: repeat(8, 11.75vh);
     grid-template-columns: repeat(10, 10vw);
     grid-auto-flow: column;
@@ -149,6 +150,7 @@ footer {
     align-self: center;
     justify-self: center;
     user-select: none;
+    cursor: url('images/hoverCursor.png'), auto;
 }
 
 .app p{
@@ -157,7 +159,15 @@ footer {
     font-size: 18px;
     text-align: center;
     margin-top: 2px;
-    cursor: url('images/hoverCursor.png'), auto;
+}
+
+.appImg {
+    align-self: center;
+    justify-self: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 5px;
 }
 
 .app.selected {
